@startuml

title __REPORT's Class Diagram__\n

  package  {
    package GUI {
      package GUI.Report {
        class ReportByUserForm {
            - frame : JFrame
            - tablePane1 : JScrollPane
            - reportTable1 : JTable
            - startDate1 : JPanel
            - endDate1 : JPanel
            - findButton1 : JButton
            - detailButton : JButton
            - panel1 : JPanel
            - userComboBox : JComboBox
            - tabbedPane : JTabbedPane
            - userPanel : JPanel
            - cancelButton : JButton
            - tablePane2 : JScrollPane
            - reportTable2 : JTable
            - endDate2 : JPanel
            - startDate2 : JPanel
            - itemPanel : JPanel
            - itemComboBox : JComboBox
            - findButton2 : JButton
            - totalLabel1 : JLabel
            - totalLabel2 : JLabel
            - cancelButton2 : JButton
            - defaultComboBoxModel : DefaultComboBoxModel
            - byItemComboBoxModel : DefaultComboBoxModel
            - defaultTableModel : DefaultTableModel
            - byItemTableModel : DefaultTableModel
            - saleList : List<Sale>
            - itemsList : List<Items>
            - userList : List<User>
            - sDate : String
            - eDate : String
            - saleId : String
            - price : String
            - stock : String
            - quantity : String
            - total : String
            - totalAmount : String
            - totalSaleAmount : Double
            - calendar : Calendar
            - startDateChooser1 : JDateChooser
            - endDateChooser1 : JDateChooser
            - startDateChooser2 : JDateChooser
            - endDateChooser2 : JDateChooser
            - simpleDateFormat : SimpleDateFormat
            + ReportByUserForm()
            + addDataToTable1()
            + findUserId()
            + findItemId()
            {static} + main()
        }
      }
    }
  }
  

  package  {
    package GUI {
      package GUI.Report {
        class ReportDialog {
            - contentPane : JPanel
            - buttonOK : JButton
            - buttonCancel : JButton
            - reportTable : JTable
            - tablePane : JScrollPane
            - saleIdLabel : JLabel
            - userNameLabel : JLabel
            - totalPriceLabel : JLabel
            - dateLabel : JLabel
            - defaultTableModel : DefaultTableModel
            - saleList : List<Sale>
            - itemsList : List<Items>
            - userList : List<User>
            - totalPrice : Double
            + ReportDialog()
            - onOK()
            - onCancel()
            + findItemName()
            + findUserName()
            {static} + main()
        }
      }
    }
  }
  

  package  {
    package GUI {
      package GUI.Report {
        class ReportForm {
            - frame : JFrame
            - panel1 : JPanel
            - reportTable : JTable
            - findButton : JButton
            - startDate : JPanel
            - endDate : JPanel
            - tablePane : JScrollPane
            - cancelButton : JButton
            - detailButton : JButton
            - defaultTableModel : DefaultTableModel
            - saleList : List<Sale>
            - itemsList : List<Items>
            - userList : List<User>
            - sDate : String
            - eDate : String
            - saleId : String
            - calendar : Calendar
            - dateChooser : JDateChooser
            - endDateChooser : JDateChooser
            - simpleDateFormat : SimpleDateFormat
            + ReportForm()
            + addDataToTable()
            + findUserName()
            + findItemName()
            {static} + main()
        }
      }
    }
  }
  

  ReportByUserForm -up-|> JFrame
  ReportByUserForm o-- SaleDAO : saleDAO
  ReportByUserForm o-- ItemDAO : itemDAO
  ReportByUserForm o-- UserDAO : userDAO
  AccessibleJFrame -up-|> AccessibleAWTFrame
  AccessibleContainerHandler -up-|> ContainerListener
  AccessibleContainerHandler -up-|> Serializable
  AccessibleAWTFocusHandler -up-|> FocusListener
  AccessibleAWTFocusHandler -up-|> Serializable
  AccessibleAWTComponentHandler -up-|> ComponentListener
  AccessibleAWTComponentHandler -up-|> Serializable
  AccessibleAWTFrame -up-|> AccessibleAWTWindow
  AccessibleContainerHandler -up-|> ContainerListener
  AccessibleContainerHandler -up-|> Serializable
  AccessibleAWTFocusHandler -up-|> FocusListener
  AccessibleAWTFocusHandler -up-|> Serializable
  AccessibleAWTComponentHandler -up-|> ComponentListener
  AccessibleAWTComponentHandler -up-|> Serializable
  AccessibleAWTWindow -up-|> AccessibleAWTContainer
  AccessibleContainerHandler -up-|> ContainerListener
  AccessibleContainerHandler -up-|> Serializable
  AccessibleAWTFocusHandler -up-|> FocusListener
  AccessibleAWTFocusHandler -up-|> Serializable
  AccessibleAWTComponentHandler -up-|> ComponentListener
  AccessibleAWTComponentHandler -up-|> Serializable
  WindowDisposerRecord -up-|> DisposerRecord
  AccessibleAWTContainer -up-|> AccessibleAWTComponent
  AccessibleAWTContainer +-down- AccessibleContainerHandler
  AccessibleContainerHandler -up-|> ContainerListener
  AccessibleContainerHandler -up-|> Serializable
  AccessibleAWTFocusHandler -up-|> FocusListener
  AccessibleAWTFocusHandler -up-|> Serializable
  AccessibleAWTComponentHandler -up-|> ComponentListener
  AccessibleAWTComponentHandler -up-|> Serializable
  WakingRunnable -up-|> Runnable
  DropTargetEventTargetFilter -up-|> EventTargetFilter
  MouseEventTargetFilter -up-|> EventTargetFilter
  AccessibleAWTComponent -up-|> Serializable
  AccessibleAWTComponent -up-|> AccessibleComponent
  AccessibleAWTComponent -up-|> AccessibleContext
  AccessibleAWTComponent +-down- AccessibleAWTFocusHandler
  AccessibleAWTComponent +-down- AccessibleAWTComponentHandler
  AccessibleAWTFocusHandler -up-|> FocusListener
  AccessibleAWTFocusHandler -up-|> Serializable
  AccessibleAWTComponentHandler -up-|> ComponentListener
  AccessibleAWTComponentHandler -up-|> Serializable
  DummyRequestFocusController -up-|> RequestFocusController
  SingleBufferStrategy -up-|> BufferStrategy
  BltSubRegionBufferStrategy -up-|> SubRegionShowable
  BltSubRegionBufferStrategy -up-|> BltBufferStrategy
  FlipSubRegionBufferStrategy -up-|> SubRegionShowable
  FlipSubRegionBufferStrategy -up-|> FlipBufferStrategy
  BltBufferStrategy -up-|> BufferStrategy
  FlipBufferStrategy -up-|> BufferStrategy
  ProxyCapabilities -up-|> ExtendedBufferCapabilities
  FlipContents -up-|> AttributeValue
  ReportDialog -up-|> JDialog
  ReportDialog o-- SaleDAO : saleDAO
  ReportDialog o-- ItemDAO : itemDAO
  ReportDialog o-- UserDAO : userDAO
  AccessibleJDialog -up-|> AccessibleAWTDialog
  AccessibleContainerHandler -up-|> ContainerListener
  AccessibleContainerHandler -up-|> Serializable
  AccessibleAWTFocusHandler -up-|> FocusListener
  AccessibleAWTFocusHandler -up-|> Serializable
  AccessibleAWTComponentHandler -up-|> ComponentListener
  AccessibleAWTComponentHandler -up-|> Serializable
  AccessibleAWTDialog -up-|> AccessibleAWTWindow
  AccessibleContainerHandler -up-|> ContainerListener
  AccessibleContainerHandler -up-|> Serializable
  AccessibleAWTFocusHandler -up-|> FocusListener
  AccessibleAWTFocusHandler -up-|> Serializable
  AccessibleAWTComponentHandler -up-|> ComponentListener
  AccessibleAWTComponentHandler -up-|> Serializable
  AccessibleAWTWindow -up-|> AccessibleAWTContainer
  AccessibleContainerHandler -up-|> ContainerListener
  AccessibleContainerHandler -up-|> Serializable
  AccessibleAWTFocusHandler -up-|> FocusListener
  AccessibleAWTFocusHandler -up-|> Serializable
  AccessibleAWTComponentHandler -up-|> ComponentListener
  AccessibleAWTComponentHandler -up-|> Serializable
  WindowDisposerRecord -up-|> DisposerRecord
  AccessibleAWTContainer -up-|> AccessibleAWTComponent
  AccessibleAWTContainer +-down- AccessibleContainerHandler
  AccessibleContainerHandler -up-|> ContainerListener
  AccessibleContainerHandler -up-|> Serializable
  AccessibleAWTFocusHandler -up-|> FocusListener
  AccessibleAWTFocusHandler -up-|> Serializable
  AccessibleAWTComponentHandler -up-|> ComponentListener
  AccessibleAWTComponentHandler -up-|> Serializable
  WakingRunnable -up-|> Runnable
  DropTargetEventTargetFilter -up-|> EventTargetFilter
  MouseEventTargetFilter -up-|> EventTargetFilter
  AccessibleAWTComponent -up-|> Serializable
  AccessibleAWTComponent -up-|> AccessibleComponent
  AccessibleAWTComponent -up-|> AccessibleContext
  AccessibleAWTComponent +-down- AccessibleAWTFocusHandler
  AccessibleAWTComponent +-down- AccessibleAWTComponentHandler
  AccessibleAWTFocusHandler -up-|> FocusListener
  AccessibleAWTFocusHandler -up-|> Serializable
  AccessibleAWTComponentHandler -up-|> ComponentListener
  AccessibleAWTComponentHandler -up-|> Serializable
  DummyRequestFocusController -up-|> RequestFocusController
  SingleBufferStrategy -up-|> BufferStrategy
  BltSubRegionBufferStrategy -up-|> SubRegionShowable
  BltSubRegionBufferStrategy -up-|> BltBufferStrategy
  FlipSubRegionBufferStrategy -up-|> SubRegionShowable
  FlipSubRegionBufferStrategy -up-|> FlipBufferStrategy
  BltBufferStrategy -up-|> BufferStrategy
  FlipBufferStrategy -up-|> BufferStrategy
  ProxyCapabilities -up-|> ExtendedBufferCapabilities
  FlipContents -up-|> AttributeValue
  ReportForm -up-|> JFrame
  ReportForm o-- SaleDAO : saleDAO
  ReportForm o-- ItemDAO : itemDAO
  ReportForm o-- UserDAO : userDAO
  AccessibleJFrame -up-|> AccessibleAWTFrame
  AccessibleContainerHandler -up-|> ContainerListener
  AccessibleContainerHandler -up-|> Serializable
  AccessibleAWTFocusHandler -up-|> FocusListener
  AccessibleAWTFocusHandler -up-|> Serializable
  AccessibleAWTComponentHandler -up-|> ComponentListener
  AccessibleAWTComponentHandler -up-|> Serializable
  AccessibleAWTFrame -up-|> AccessibleAWTWindow
  AccessibleContainerHandler -up-|> ContainerListener
  AccessibleContainerHandler -up-|> Serializable
  AccessibleAWTFocusHandler -up-|> FocusListener
  AccessibleAWTFocusHandler -up-|> Serializable
  AccessibleAWTComponentHandler -up-|> ComponentListener
  AccessibleAWTComponentHandler -up-|> Serializable
  AccessibleAWTWindow -up-|> AccessibleAWTContainer
  AccessibleContainerHandler -up-|> ContainerListener
  AccessibleContainerHandler -up-|> Serializable
  AccessibleAWTFocusHandler -up-|> FocusListener
  AccessibleAWTFocusHandler -up-|> Serializable
  AccessibleAWTComponentHandler -up-|> ComponentListener
  AccessibleAWTComponentHandler -up-|> Serializable
  WindowDisposerRecord -up-|> DisposerRecord
  AccessibleAWTContainer -up-|> AccessibleAWTComponent
  AccessibleAWTContainer +-down- AccessibleContainerHandler
  AccessibleContainerHandler -up-|> ContainerListener
  AccessibleContainerHandler -up-|> Serializable
  AccessibleAWTFocusHandler -up-|> FocusListener
  AccessibleAWTFocusHandler -up-|> Serializable
  AccessibleAWTComponentHandler -up-|> ComponentListener
  AccessibleAWTComponentHandler -up-|> Serializable
  WakingRunnable -up-|> Runnable
  DropTargetEventTargetFilter -up-|> EventTargetFilter
  MouseEventTargetFilter -up-|> EventTargetFilter
  AccessibleAWTComponent -up-|> Serializable
  AccessibleAWTComponent -up-|> AccessibleComponent
  AccessibleAWTComponent -up-|> AccessibleContext
  AccessibleAWTComponent +-down- AccessibleAWTFocusHandler
  AccessibleAWTComponent +-down- AccessibleAWTComponentHandler
  AccessibleAWTFocusHandler -up-|> FocusListener
  AccessibleAWTFocusHandler -up-|> Serializable
  AccessibleAWTComponentHandler -up-|> ComponentListener
  AccessibleAWTComponentHandler -up-|> Serializable
  DummyRequestFocusController -up-|> RequestFocusController
  SingleBufferStrategy -up-|> BufferStrategy
  BltSubRegionBufferStrategy -up-|> SubRegionShowable
  BltSubRegionBufferStrategy -up-|> BltBufferStrategy
  FlipSubRegionBufferStrategy -up-|> SubRegionShowable
  FlipSubRegionBufferStrategy -up-|> FlipBufferStrategy
  BltBufferStrategy -up-|> BufferStrategy
  FlipBufferStrategy -up-|> BufferStrategy
  ProxyCapabilities -up-|> ExtendedBufferCapabilities
  FlipContents -up-|> AttributeValue


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
